fixed html code

--- a/twitter-geekbrains/index.html
+++ b/twitter-geekbrains/index.html
@@ -319,7 +319,7 @@
                             <span>
                                 Category
                             </span>
-                            <a href="#" style="">
+                            <a href="#">
                                 <img src="img/list-button.svg" alt="">
                             </a>
                         </div>
